--- a/admin.html
+++ b/admin.html
@@ -16,8 +16,10 @@
             Hello there! I'm Nishan Giri, currently pursuing my BSc in CSIT at Mechi Multiple Campus, Bhadrapur. Embracing the world of technology, I find myself in an exciting learning phase where every challenge is an opportunity to grow. As a passionate learner, I'm not just navigating through the complexities of programming and web development; I'm also eager to share my knowledge and assist fellow enthusiasts. Whether you're on a similar learning journey or seeking some guidance, I'm here to help as much as I can. You've landed on "Learn Today," my humble corner of the web where I document my experiences, insights, and anything else that sparks my interest in the tech realm. Join me in this collaborative learning experience!
         </p>
         <div class="me">
-            <div class="fnd">Find me on</div>
-            <a href="https://www.facebook.com/nishan.giri.9699"><i class="fa-brands fa-facebook"></i></a>
+            <div class="fnd">
+                Find me on
+            </div>
+            <a href="https://www.facebook.com/nishan.giri.9699" target="_blank"><i class="fa-brands fa-facebook"></i></a>
         </div>
     </div>
     <div class="back">
